favicon and number in heights slider

--- a/src/app/shared/heights-slider/heights-slider.component.html
+++ b/src/app/shared/heights-slider/heights-slider.component.html
@@ -11,20 +11,20 @@
                         <!-- <div class="icon-height-slider-card">
                             <i [class]="slide.icon"></i>
                         </div> -->
-                        <p class="heights-slider-card-num">
+                        <!-- <p class="heights-slider-card-num" *ngIf="slide.num">
                             {{slide.num}}
-                        </p>
+                        </p> -->
                         <p class="heights-slider-card-title">
                             {{slide.title}}
                         </p>
-                        <p class="heights-slider-card-description" *ngIf="slide.descr">
+                        <!-- <p class="heights-slider-card-description" *ngIf="slide.descr">
                             {{slide.descr}}
-                        </p>
+                        </p> -->
 
-                        <p class="heights-slider-card-title read-more"  *ngIf="slide.descr">
+                        <!-- <p class="heights-slider-card-title read-more"  *ngIf="slide.descr">
                             Read more
                             <i class="bi bi-arrow-right"></i>
-                        </p>
+                        </p> -->
                     </div>
                 </div>
             </ng-template>
