--- a/src/app/shared/mission-slider/mission-slider.component.html
+++ b/src/app/shared/mission-slider/mission-slider.component.html
@@ -2,7 +2,7 @@
 <div  class="mission-card" [ngClass]="{'mobile':isMobile}" >
     <!-- [@fadeInFromTop2] -->
     <owl-carousel-o class="container" [options]="customOptions">
-        <ng-container *ngFor="let slide of slides; let i = index;">
+        <ng-container *ngFor="let slide of missions; let i = index;">
             <ng-template carouselSlide>
 
                 <div class="mission-card"  [ngClass]="getAnimationClass(i)">
