--- a/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
+++ b/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
@@ -3,16 +3,16 @@
     <div class="image-side" [@fadeInFromLeft]>
         <!-- <img class="image-shadow" alt="img" src="../../../assets/portfolio-card.svg"> -->
         <!-- <img class="image-shadow" alt="img" src="../../../assets/portfolio-details-image.svg"> -->
-        <img class="image-shadow" alt="img" src="../../../assets/combinedsvg.svg">
+        <img class="image-shadow" alt="img" src="{{img}}">
     </div>
     <div class="text-side">
-        <!-- <h2 class="h2-font-big" [@slideFromTop] >{{title}}</h2> -->
+        <h2 class="h2-font-big" [@slideFromTop] >{{title}}</h2>
 
         <!-- [innerHtml]="content" *ngIf="content" -->
-        <div class="html-inner-content">
+        <div class="html-inner-content"  [innerHtml]="content" *ngIf="content" >
 
             <!-- <h2 class="h2-font-big" [@slideFromTop] >{{title}}</h2> -->
-            <h2 class="h2-font-big" [@slideFromTop]>MILAYA ENERGY</h2>
+            <!-- <h2 class="h2-font-big" [@slideFromTop]>MILAYA ENERGY</h2>
 
 
             <p class="font-p" [@fadeInFromRight] [ngClass]="{'container':isMobile}">
@@ -34,7 +34,7 @@
                 drilling in the Oil and Gas industry. Milaya Energy is more than an extension of your procurement
                 function. We work with you to create a single, unified process one that’s simple, efficient, and
                 generates extra value.
-            </p>
+            </p> -->
 
         </div>
         <div class="d-flex contact-button" [@fadeInFromTop1]>
