--- a/src/app/shared/portfolio-vertical-card/portfolio-vertical-card.component.scss
+++ b/src/app/shared/portfolio-vertical-card/portfolio-vertical-card.component.scss
@@ -77,6 +77,7 @@
 .left-card {
     margin-left: 0px;
     margin-right: auto;
+    height: 100%;
 }
 
 .portfolio-card.mobile,
@@ -113,6 +114,6 @@
     }
     
     .text-side{
-        height: 25vh !important;
+        // height: 25vh !important;
     }
 }
