--- a/src/app/pages/portfolio-details/portfolio-details.component.html
+++ b/src/app/pages/portfolio-details/portfolio-details.component.html
@@ -1,6 +1,6 @@
 <!-- Portfolio Details Page Opens when user clicks on any portfolio card tile to go to details  -->
-<app-overview [pageTitle]="'Portfolio Detail'"
-    [pageOverviewText]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utex   ex ea commodo consequat.'"></app-overview>
+<app-overview [pageTitle]="'Portfolio Detail'" ></app-overview>
+<!-- [pageOverviewText]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Utex   ex ea commodo consequat.'" -->
 <div class="spacer-div"></div>
 
 
