--- a/src/app/shared/new-business-heights/new-business-heights.component.html
+++ b/src/app/shared/new-business-heights/new-business-heights.component.html
@@ -5,9 +5,9 @@
         <h1 class="black" [@enterFromLeft]="animationStates.enterFromLeft" >New Business Heights</h1>
     </div>
     <div class="box">
-        <h2 class="grey-p" [@enterFromTop]="animationStates.enterFromTop" >
-            We are at the highest levels by developing it with the best options. We serve with many experienced
-            employees in this field.
+        <h2 class="grey-p" [@enterFromTop]="animationStates.enterFromTop" [innerHTML]="newBusinessHeightsContent">
+            <!-- We are at the highest levels by developing it with the best options. We serve with many experienced
+            employees in this field. -->
         </h2>
     </div>
 </div>
