--- a/src/app/shared/we-are-card/we-are-card.component.html
+++ b/src/app/shared/we-are-card/we-are-card.component.html
@@ -12,11 +12,11 @@
             </div>
             <h1 [@slideInFromRight]>Leaders in Management</h1>
         </div>
-        <p class="we-are-description" [@fadeInFromRight]>
-            Milaya Capital Limited is a company entirely owned by its management and it is free from any ownership or
+        <p class="we-are-description" [@fadeInFromRight] [innerHTML]="leadersInManagementContent">
+            <!-- Milaya Capital Limited is a company entirely owned by its management and it is free from any ownership or
             control by any banking, financial or insurance organization. Milaya Capital has built its reputation by
             being fully committed and transparent to its dealings ensuring, efficiency and effectiveness in all aspects
-            of today’s business requirements.
+            of today’s business requirements. -->
         </p>
         <div class="spacer-div"></div>
         <button type="button" class="btn btn-primary contact-btn" [@slideInFromRight]  [routerLink]="'/contact'">
