--- a/src/app/shared/portfolio-slider/portfolio-slider.component.html
+++ b/src/app/shared/portfolio-slider/portfolio-slider.component.html
@@ -5,12 +5,13 @@
         <div class="portfolio-card-image">
           <img alt="portfolio" [src]="slide.img">
         </div>
-        <p class="portfolio-card-title">
+        <!-- Keep them commented  -->
+        <!-- <p class="portfolio-card-title">
           {{slide.title}}
         </p>
         <p class="portfolio-card-desc">
           {{slide.descr}}
-        <p>
+        <p> -->
       </div>
     </div>
   </ngx-slick-carousel>
