--- a/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
+++ b/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
@@ -38,21 +38,24 @@
 
         </div>
         <div class="d-flex contact-button" [@fadeInFromTop1]>
-            <div class="contact-btn-col">
-                <button type="button" class="btn btn-primary" (click)="navigateToExternalLink()">
-                    MILAYAENERGY.COM
+            <div class="contact-btn-col"  *ngIf="website">
+                <button type="button" class="btn btn-primary" (click)="navigateToExternalLink()" [innerHTML]="website.split('//')[1]">
+                    <!-- MILAYAENERGY.COM -->
                     <i class="bi bi-arrow-up-right"></i>
                 </button>
             </div>
             <div class="contact-details">
-                <div class="d-flex">
+                <div class="d-flex"  *ngIf="location">
                     <i class="bi bi-geo-alt bold"></i>
-                    <span>Lorem ipsum dolor sit amet, 000 UAE </span>
+                    <span [innerHTML]="location">
+                        <!-- Lorem ipsum dolor sit amet, 000 UAE -->
+                     </span>
                 </div>
-
-                <div class="d-flex">
+                <div class="d-flex"  *ngIf="email">
                     <i class="bi bi-envelope bold"></i>
-                    <span>info@milayacapital.ae</span>
+                    <span [innerHTML]="email">
+                        <!-- info@milayacapital.ae -->
+                    </span>
                 </div>
             </div>
 
