--- a/src/app/shared/portfolio-slider/portfolio-slider.component.scss
+++ b/src/app/shared/portfolio-slider/portfolio-slider.component.scss
@@ -33,6 +33,9 @@
 
             img {
                 width: 100%;
+                height: 425px;
+                object-fit: cover;
+                object-position: center center;
             }
         }
 
