--- a/src/app/shared/contact-map/contact-map.component.html
+++ b/src/app/shared/contact-map/contact-map.component.html
@@ -1,4 +1,5 @@
 <!-- Contact Map section using leaflet library  -->
-<div id="map" [@enterFromTop]="animationStates.enterFromTop"  [ngClass]="{'mobile':isMobile}" >
+<app-loader [isLoading]="isLoading"></app-loader>
+<div id="map" [@enterFromTop]="animationStates.enterFromTop"  [ngClass]="{'mobile':isMobile}"  >
 
 </div>
