--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,5 +1,6 @@
 <!-- About Page -->
-<div class="container about" [ngClass]="{'mobile':isMobile}">
+<app-loader [isLoading]="isLoading"></app-loader>
+<div class="container about" [ngClass]="{'mobile':isMobile}"  *ngIf="!isLoading">
     <app-overview [pageTitle]="'About Us'"></app-overview>
     <!-- [pageOverviewText]="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.'" -->
     <div class="spacer-div"></div>
