--- a/src/app/shared/mission-slider/mission-slider.component.html
+++ b/src/app/shared/mission-slider/mission-slider.component.html
@@ -1,11 +1,12 @@
 <!-- Mission Slider section  -->
-<div  class="mission-card" [ngClass]="{'mobile':isMobile}" >
+<app-loader [isLoading]="isLoading"></app-loader>
+<div class="mission-card" [ngClass]="{'mobile':isMobile}" *ngIf="!isLoading">
     <!-- [@fadeInFromTop2] -->
     <owl-carousel-o class="container" [options]="customOptions">
         <ng-container *ngFor="let slide of missions; let i = index;">
             <ng-template carouselSlide>
 
-                <div class="mission-card"  [ngClass]="getAnimationClass(i)">
+                <div class="mission-card" [ngClass]="getAnimationClass(i)">
                     <div class="icon-mission-card">
                         <i [class]="slide.icon"></i>
                     </div>
