--- a/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
+++ b/src/app/shared/portfolio-detail-card/portfolio-detail-card.component.html
@@ -1,5 +1,6 @@
 <!-- Portfolio Details Card section  -->
-<div class="container portfolio-detail-card" [ngClass]="{'mobile':isMobile}">
+<app-loader [isLoading]="isLoading"></app-loader>
+<div class="container portfolio-detail-card" [ngClass]="{'mobile':isMobile}"  *ngIf="!isLoading">
     <div class="image-side" [@fadeInFromLeft]>
         <!-- <img class="image-shadow" alt="img" src="../../../assets/portfolio-card.svg"> -->
         <!-- <img class="image-shadow" alt="img" src="../../../assets/portfolio-details-image.svg"> -->
